# kbnf

./: .gitignore  Cargo.toml  LICENSE  README.md  build_wasm.sh  pyproject.toml  rustfmt.toml
.github/workflows/: CI.yml  python_wheels.yml  rust.yml  rust_crate.yml  rust_lib.yml
benches/: profiler.rs  simple.rs
kbnf/: Cargo.toml  __init__.py  engine.py
kbnf/benches/: simple.rs
kbnf/src/: config.rs  engine.rs  engine_base.rs  engine_like.rs  generic_rc.rs  grammar.rs  lib.rs  non_zero.rs  utils.rs  vocabulary.rs  zero.rs
kbnf/tests/: test.rs  vocab.txt
kbnf/tests/snapshots/: test__tests__indirect_right_recursion-2.snap  test__tests__indirect_right_recursion-2.snap.new  test__tests__indirect_right_recursion.snap  test__tests__indirect_right_recursion.snap.new  test__tests__left_recursion.snap  test__tests__left_recursion.snap.new  test__tests__middle_recursion.snap  test__tests__minimal_case-2.snap  test__tests__minimal_case-2.snap.new  test__tests__minimal_case-3.snap  test__tests__minimal_case-3.snap.new  test__tests__minimal_case.snap  test__tests__minimal_case.snap.new  test__tests__right_recursion-2.snap  test__tests__right_recursion-2.snap.new  test__tests__right_recursion.snap  test__tests__right_recursion.snap.new
python/kbnf/: __init__.py  engine.py  triton_logits_mask.py
src/: config.rs  engine.rs  engine_base.rs  engine_like.rs  ffi_bindings.rs  grammar.rs  lib.rs  utils.rs  vocabulary.rs  wasm_binding.rs
tests/: test.rs
tests/snapshots/: test__tests__escaped_character-2.snap  test__tests__escaped_character.snap  test__tests__indirect_right_recursion-2.snap  test__tests__indirect_right_recursion.snap  test__tests__json_string-2.snap  test__tests__left_recursion.snap  test__tests__middle_recursion.snap  test__tests__minimal_case-2.snap  test__tests__minimal_case-3.snap  test__tests__minimal_case.snap  test__tests__regex_complement.snap  test__tests__right_recursion-2.snap  test__tests__right_recursion.snap  test__tests__single_regex-2.snap  test__tests__single_regex.snap  test__tests__single_regex2-2.snap  test__tests__single_regex2-2.snap.new  test__tests__single_regex2-3.snap  test__tests__single_regex2-3.snap.new  test__tests__single_regex2.snap  test__tests__single_regex2.snap.new  test__tests__single_terminal-2.snap  test__tests__single_terminal.snap  test__tests__substrings-2.snap  test__tests__substrings-3.snap  test__tests__substrings-4.snap  test__tests__substrings.snap
