[build-system]
requires = ["maturin>=1,<2","cffi"]
build-backend = "maturin"

[project]
name = "kbnf"
dependencies = ["cffi","numpy"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
[project.optional-dependencies]
torch = ["torch"]