[build-system]
requires = ["maturin>=1,<2"]
build-backend = "maturin"
[tool.maturin]
python-source = "python"
features = ["python"]
[project]
name = "kbnf"
version = "0.3.11"
dependencies = ["numpy"]
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]
[project.optional-dependencies]
torch = ["torch"]