[package]
name = "kbnf"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
thiserror = "1.0.61"
ebnf = {git="https://github.com/Dan-wanna-M/ebnf.git"}
num = "0.4.3"
jaggedarray = "0.2.2"
string-interner = "0.17.0"
nom = "7.1.3"
tinyvec = "1.6.0"
nonmax = "0.5.5"
fixedbitset = {git="https://github.com/Dan-wanna-M/fixedbitset.git"}
regex-automata={git="https://github.com/Dan-wanna-M/regex.git"}
displaydoc = "0.2.4"
serde = "1.0.203"
strum = { version = "0.26", features = ["derive"] }
[dev-dependencies]
insta = { version = "1.26.0"}
serde_json = "1.0.48"